--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 </head>
 
 <body>
-  <!-- Navbar -->
   <div class="container-fluid p-0">
+
+  <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">Arpood</a>
@@ -42,7 +43,7 @@
             <a class="nav-item nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-item nav-link" href="#">About</a>
             <a class="nav-item nav-link" href="#">Contact</a>
-            <a class="nav-item btn btn-success tombol" href="#">Fire Me An Email</a>
+            <a class="nav-item btn btn-success arput-tombol" href="#">Fire Me An Email</a>
           </div>
         </div>
       </div>
@@ -53,10 +54,71 @@
       <div class="container">
         <h1 class="display-2">Hi, Everyone!</h1>
         <p class="lead">I am Arya</p>
-        <a href="" class="btn btn-success tombol">HIRE ME</a>
+        <a href="" class="btn btn-success arput-tombol">HIRE ME</a>
       </div>
     </div>
+
+    <!-- Container -->
+    <!-- About Me -->
+    <div class="arput-aboutme-background">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-8 arput-aboutme">
+            <div class="row justify-content-center">
+              <h3 class="arput-aboutme-heading">ABOUT MYSELF</h3>
+            </div>
+            <div>
+              <p class="arput-aboutme-text">Aku sangat suka kamu aj dajhsdakhdnaijdnainjdiajndiajndiadniaendiaenudkads kajn dka dkajdkajndkajdnkajend</p>
+            </div>
+            <div class="arput-center">
+              <a href="" class="btn arput-tombol-download">Download</a>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-lg arput-aboutme-skill">
+                akdsjkasjd
+              </div>
+              <div class="col-lg arput-aboutme-skill">
+                akdsjkasjd
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Expertise -->
+    <div>
+      <div class="arput-expertise arput-center">
+        <h2>My Expertise</h2>
+      </div>
+      <div class="row arput-expertise-margin">
+        <div class="col">
+          <div class="arput-expertise-border">
+            kjdakjdnsa
+          </div>
+        </div>
+        <div class="col arput-expertise-margin">
+          <div>
+            aldsjnakajdn
+          </div>
+          <div>
+            kjnfakjna
+          </div>
+          <div>
+            lajndlajnfka
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Experience -->
+    <div class="container">
+      
+    </div>
+    
   </div>
+
 
 
 
