--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <div class="container-fluid p-0">
 
-  <!-- Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">Arpood</a>
@@ -54,70 +54,74 @@
       <div class="container">
         <h1 class="display-2">Hi, Everyone!</h1>
         <p class="lead">I am Arya</p>
-        <a href="" class="btn btn-success arput-tombol">HIRE ME</a>
+        <a href="#" class="btn btn-success arput-tombol">HIRE ME</a>
       </div>
     </div>
 
     <!-- Container -->
     <!-- About Me -->
-    <div class="arput-aboutme-background">
-      <div class="container">
+    <div class="container-fluid p-0">
+      <div class="arput-aboutme-background"></div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-7 arput-aboutme">
         <div class="row justify-content-center">
-          <div class="col-8 arput-aboutme">
-            <div class="row justify-content-center">
-              <h3 class="arput-aboutme-heading">ABOUT MYSELF</h3>
+          <div class="arput-center">
+            <h3 class="arput-aboutme-heading">ABOUT MYSELF</h3>
+            <div class="arput-aboutme-text arput-aboutme-padding">
+              <p>
+                Aku sangat suka kamu waijfnaifna fafh ahfn ah faefh oaef hafae fahe fahe faf ai fhia fia faihe faihf aif
+              </p>
             </div>
             <div>
-              <p class="arput-aboutme-text">Aku sangat suka kamu aj dajhsdakhdnaijdnainjdiajndiajndiadniaendiaenudkads kajn dka dkajdkajndkajdnkajend</p>
-            </div>
-            <div class="arput-center">
-              <a href="" class="btn arput-tombol-download">Download</a>
+              <a href="#" class="btn arput-tombol-download">Download</a>
             </div>
             <hr>
-            <div class="row">
-              <div class="col-lg arput-aboutme-skill">
-                akdsjkasjd
-              </div>
-              <div class="col-lg arput-aboutme-skill">
-                akdsjkasjd
-              </div>
-            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg arput-aboutme-interest">
+            akdsjkasjd
+          </div>
+          <div class="col-lg arput-aboutme-interest">
+            akdsjkasjd
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Expertise -->
-    <div>
-      <div class="arput-expertise arput-center">
-        <h2>My Expertise</h2>
-      </div>
-      <div class="row arput-expertise-margin">
-        <div class="col">
-          <div class="arput-expertise-border">
-            kjdakjdnsa
-          </div>
-        </div>
-        <div class="col arput-expertise-margin">
-          <div>
-            aldsjnakajdn
-          </div>
-          <div>
-            kjnfakjna
-          </div>
-          <div>
-            lajndlajnfka
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Experience -->
-    <div class="container">
-      
-    </div>
-    
   </div>
+
+  <!-- Expertise -->
+  <section class="experience-top section-padding">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xxl-9 col-xl-10 col-lg-10">
+          <div class="section-tittle arput-center mb-45">
+            <h2>My Expertise</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col-xxl-6 col-xl-7 col-lg-6">
+          <div class="experience">
+            <h2>User Experience Design</h2>
+            <h2>User Interface Design</h2>
+            <h2>Web Design</h2>
+          </div>
+        </div>
+        <div class="col-xxl-6 col-xl-5 col-lg-6">
+          <div class="section-tittle pl-30 m-0">
+            <p>Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante. Donec massa velit,
+              varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed libero varius vulputate.</p>
+            <p>Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante. Donec massa velit,
+              varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed libero varius vulputate.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
 
 
 
