--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <h1 class="display-2">Hi, Everyone!</h1>
         <p class="lead">I am Arya</p>
-        <a href="#" class="btn btn-success arput-tombol">HIRE ME</a>
+        <a href="#" class="btn btn-success arput-tombol-hire">HIRE ME</a>
       </div>
     </div>
 
