--- a/index.html
+++ b/index.html
@@ -2,126 +2,132 @@
 <html lang="en">
 
 <head>
-  <title>Bootstrap 4 Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Bootstrap 4 Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
 
-  <!-- My Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:opsz,wght@9..40,300;9..40,500;9..40,600;9..40,700&family=Inclusive+Sans&family=Inconsolata:wght@400;500;600;700&family=Inter:wght@300;500;600;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:opsz,wght@9..40,300;9..40,500;9..40,600;9..40,700&family=Inclusive+Sans&family=Inconsolata:wght@400;500;600;700&family=Inter:wght@300;500;600;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&family=Shippori+Mincho:wght@400;500;600;700;800&display=swap"
-    rel="stylesheet">
+    <!-- My Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:opsz,wght@9..40,300;9..40,500;9..40,600;9..40,700&family=Inclusive+Sans&family=Inconsolata:wght@400;500;600;700&family=Inter:wght@300;500;600;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:opsz,wght@9..40,300;9..40,500;9..40,600;9..40,700&family=Inclusive+Sans&family=Inconsolata:wght@400;500;600;700&family=Inter:wght@300;500;600;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&family=Shippori+Mincho:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
 
-  <!-- My CSS -->
-  <link rel="stylesheet" href="style.css">
+    <!-- My CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="container-fluid p-0">
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#">Arpood</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-item nav-link" href="#">About</a>
-            <a class="nav-item nav-link" href="#">Contact</a>
-            <a class="nav-item btn btn-success arput-tombol" href="#">Fire Me An Email</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Jumbotron -->
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-2">Hi, Everyone!</h1>
-        <p class="lead">I am Arya</p>
-        <a href="#" class="btn btn-success arput-tombol-hire">HIRE ME</a>
-      </div>
-    </div>
-
-    <!-- Container -->
-    <!-- About Me -->
     <div class="container-fluid p-0">
-      <div class="arput-aboutme-background"></div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-7 arput-aboutme">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Arpood</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-item nav-link" href="#">About</a>
+                        <a class="nav-item nav-link" href="#">Contact</a>
+                        <a class="nav-item btn btn-success arput-tombol" href="#">Fire Me An Email</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Jumbotron -->
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container-fluids">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1 class="display-2">Hi, Everyone!</h1>
+                        <p class="lead">I am Arya</p>
+                        <a href="#" class="btn btn-success arput-tombol-hire">HIRE ME</a>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="banner_slider" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <div><img src="fotodiri1 1.svg" class="foto"></div>
+                                </div>
+                                <div class="carousel-item">
+                                    <div><img src="fotodiri2 1.svg" class="foto"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Container -->
+        <!-- About Me -->
+        <div class="container-fluid p-0">
+            <div class="arput-aboutme-background"></div>
+        </div>
         <div class="row justify-content-center">
-          <div class="arput-center">
-            <h3 class="arput-aboutme-heading">ABOUT MYSELF</h3>
-            <div class="arput-aboutme-text arput-aboutme-padding">
-              <p>
-                Aku sangat suka kamu waijfnaifna fafh ahfn ah faefh oaef hafae fahe fahe faf ai fhia fia faihe faihf aif
-              </p>
+            <div class="col-7 arput-aboutme">
+                <div class="row justify-content-center">
+                    <div class="arput-center">
+                        <h3 class="arput-aboutme-heading">ABOUT MYSELF</h3>
+                        <div class="arput-aboutme-text arput-aboutme-padding">
+                            <p>
+                                Aku sangat suka kamu waijfnaifna fafh ahfn ah faefh oaef hafae fahe fahe faf ai fhia
+                                fia faihe faihf aif
+                            </p>
+                        </div>
+                        <div>
+                            <a href="#" class="btn arput-tombol-download">Download</a>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg arput-aboutme-interest">
+                        akdsjkasjd
+                    </div>
+                    <div class="col-lg arput-aboutme-interest">
+                        akdsjkasjd
+                    </div>
+                </div>
             </div>
-            <div>
-              <a href="#" class="btn arput-tombol-download">Download</a>
+        </div>
+    </div>
+
+    <!-- Expertise -->
+    <div class="container">
+        <div class="row justify-content-center">
+          <div class="arput-center experience-top">
+            <div class="section-tittle mb-45">
+              <h2>My Expertise</h2>
             </div>
-            <hr>
+            <div class="section-tittle">
+              <h2>Project Management</h2>
+              <h2>Web Development</h2>
+              <h2>Design</h2>
+            </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg arput-aboutme-interest">
-            akdsjkasjd
-          </div>
-          <div class="col-lg arput-aboutme-interest">
-            akdsjkasjd
-          </div>
+          <div></div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!-- Expertise -->
-  <section class="experience-top section-padding">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-xxl-9 col-xl-10 col-lg-10">
-          <div class="section-tittle arput-center mb-45">
-            <h2>My Expertise</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row align-items-center">
-        <div class="col-xxl-6 col-xl-7 col-lg-6">
-          <div class="experience">
-            <h2>User Experience Design</h2>
-            <h2>User Interface Design</h2>
-            <h2>Web Design</h2>
-          </div>
-        </div>
-        <div class="col-xxl-6 col-xl-5 col-lg-6">
-          <div class="section-tittle pl-30 m-0">
-            <p>Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante. Donec massa velit,
-              varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed libero varius vulputate.</p>
-            <p>Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante. Donec massa velit,
-              varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed libero varius vulputate.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  
 
 
 
