--- a/index.html
+++ b/index.html
@@ -33,44 +33,25 @@
 <body>
     <div class="container-fluid p-0">
         <!-- Navbar -->
-        <!-- <div class="scroll-up-btn">
-            <i class="fas fa-angle-up"></i>
-        </div>
-        <nav class="navbar">
-            <div class="max-width">
-                <div class="logo"><a href="#">Personal<span> Profile</span></a></div>
-                <ul class="menu">
-                    <li><a href="#home" class="menu-btn">Home</a></li>
-                    <li><a href="#about" class="menu-btn">About</a></li>
-                    <li><a href="#services" class="menu-btn">Services</a></li>
-                    <li><a href="#skills" class="menu-btn">Skills</a></li>
-                    <li><a href="#teams" class="menu-btn">Experiences</a></li>
-                    <li><a href="#contact" class="menu-btn">Contact</a></li>
-                </ul>
-                <div class="menu-btn">
-                    <i class="fas fa-bars"></i>
-                </div>
-            </div>
-        </nav> -->
-    
-
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Arpood</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" aria-current="page" href="home">Home</a>
-                        <a class="nav-item nav-link" href="about">About</a>
-                        <a class="nav-item nav-link" href="contact">Contact</a>
-                        <a class="nav-item btn btn-success arput-tombol" href="https://mail.google.com/mail/u/0/">Fire Me An Email</a>
+        <section>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Arpood</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav ml-auto">
+                            <a class="nav-item nav-link active" aria-current="page" href="home">Home</a>
+                            <a class="nav-item nav-link" href="about">About</a>
+                            <a class="nav-item nav-link" href="contact">Contact</a>
+                            <a class="nav-item btn btn-success arput-tombol" href="https://mail.google.com/mail/u/0/">Fire Me An Email</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </section>
 
         <!-- Jumbotron -->
         <section id="home">
@@ -401,11 +382,7 @@
         <span>Copyright © 2023 by Arya Putra Tsabitah Firjatulloh</span>
     </footer>
 
-    <script src="script.js"></script>
-
-
-
-
+    <script src="javascript.js"></script>
 </body>
 
 </html>
