--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                     <div class="mail_section_1">
                                         <input type="text" class="mail_text" placeholder="Name" name="Name">
                                         <input type="text" class="mail_text" placeholder="Email" name="Email">
-                                        <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
+                                        <input type="text" class="mail_text" placeholder="Subject" name="Subject">
                                         <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment"
                                             name="Massage"></textarea>
                                         <div class="send_bt"><a href="#">Send</a></div>
