--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <script src="javascript.js"></script>
 </head>
 
 <body>
@@ -361,11 +363,11 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="mail_section_1">
-                                        <input type="text" class="mail_text" placeholder="Name" name="Name">
-                                        <input type="text" class="mail_text" placeholder="Email" name="Email">
-                                        <input type="text" class="mail_text" placeholder="Subject" name="Subject">
-                                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment"
-                                            name="Massage"></textarea>
+                                        <input type="text" id="nameInput" class="mail_text" placeholder="Your Name" name="Name">
+                                        <input type="text" id="emailInput" class="mail_text" placeholder="Your email" name="Email">
+                                        <input type="text" id="subjectInput" class="mail_text" placeholder="Subject" name="Subject">
+                                        <textarea id="messageInput" class="massage-bt" placeholder="Your message" rows="5" id="comment"
+                                            name="Message"></textarea>
                                         <div class="send_bt"><a href="#">Send</a></div>
                                     </div>
                                 </div>
