--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                         <input type="text" id="subjectInput" class="mail_text" placeholder="Subject" name="Subject">
                                         <textarea id="messageInput" class="massage-bt" placeholder="Your message" rows="5" id="comment"
                                             name="Message"></textarea>
-                                        <div class="send_bt"><a href="#">Send</a></div>
+                                        <button id="submitButton">Send</button>
                                     </div>
                                 </div>
                             </div>
