--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <!-- Quotes -->
     <section id="quotes">
         <div class="container-fluid pd-0">
-            <div class="row arput-quotes arput arput-margin-top">
+            <div class="row arput-quotes arput-margin-top">
                 <div class="col-6 arput-pd-0 arput-padding-top arput-quotes-image">
                     <img src="sendiri-menatap-bintang-di-langit-18.jpg" alt="Quotes" class="img-fluid">
                 </div>
